--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>The Photo Blog</title>
+  <title>The Photo Blog1</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/article.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="amp-google-client-id-api" content="googleanalytics">
